# alpaka_expr_trees

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
example/: CMakeLists.txt  phase_oscillator_chain_alpaka.cpp  phase_oscillator_chain_thrust.cu  phase_oscillator_ensemble_alpaka.cpp
include/algebra/: algebra.hpp  alpaka.hpp  operations.hpp  state_wrapper.hpp
include/expressions/: 1d_reduction.hpp  binary_cwise_expression.hpp  evaluator.hpp  expression_base.hpp  functors.hpp  materialize_expression.hpp  unary_cwise_expression.hpp  vector.hpp
tests/: 1d_reduction.cpp  CMakeLists.txt  algebra_test.cpp
